--- a/redeslocales/apuntes.html
+++ b/redeslocales/apuntes.html
@@ -148,6 +148,8 @@ Error message and password prompt
 
 <li>$:/config/NewJournal/Title</li>
 
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/encryption</li>
+
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/export-page</li>
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/language</li>
@@ -702,6 +704,9 @@ margin:0 auto;
 </div>
 <div created="20190907220418589" modified="20190907220418754" title="$:/config/NewJournal/Title">
 <pre>DD MMM YYYY</pre>
+</div>
+<div created="20211211073420978" modified="20211211073659457" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/encryption">
+<pre>hide</pre>
 </div>
 <div created="20190929214204845" modified="20190929214220491" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/export-page">
 <pre>hide</pre>
@@ -10317,8 +10322,8 @@ margin:0 auto;
 <div created="20190907221955795" modified="20210804151117037" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Explorer</pre>
 </div>
-<div created="20190907220257393" modified="20210804150555787" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/More</pre>
+<div created="20190907220257393" modified="20211211073411185" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Tools</pre>
 </div>
 <div created="20191012073346519" modified="20191014212233454" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/EditToolbar</pre>
