--- a/Practicas/SERRED/wireguard-ubuntu-server-20/index.html
+++ b/Practicas/SERRED/wireguard-ubuntu-server-20/index.html
@@ -104,11 +104,15 @@ Are you sure you want to continue connecting (yes/no/[fingerprint])?
 <p>También podemos acceder a ver nuestra clave pública ejecutando:</p>
 <pre><code>sudo cat /etc/wireguard/keys/server.key.pub
 </code></pre>
-<h2 is-upgraded>Determinar la interfaz predeterminada</h2>
-<p>Es necesario conocer el nombre de la interfaz que estamos usando para acceder a Internet, ya que tendremos que escribirlo en la configuración. Si no sabes cuál es, el siguiente comando te lo revelará:</p>
+<h2 is-upgraded>Determinar la interfaz que vamos a enrutar</h2>
+<p>Es necesario conocer el nombre de la interfaz que queremos enrutar a través del túnel, ya que tendremos que escribirlo en la configuración. Si el servidor se conecta a Internet a través de la misma interfaz que a su red local, el siguiente comando te lo revelará:</p>
 <pre><code>ip -o -4 route show to default | awk &#39;{print $5}&#39;
 </code></pre>
 <p>El nombre que a mí me muestra es <code>ens3</code>. Anota el tuyo.</p>
+<p>Si el servidor se conecta a Internet usando una interfaz distinta a la interfaz a través de la cual se conecta a la red privada a la que queremos que acceda el cliente VPN, tendremos que obtener el nombre analizando todas las interfaces que aparecen ejecutando el comando:</p>
+<pre><code>ip add
+</code></pre>
+<p>La interfaz de la red local será aquella que tenga configurada una IP del rango de la red privada.</p>
 <h2 is-upgraded>Configurar la interfaz para WireGuard</h2>
 <p>WireGuard funciona añadiendo una interfaz de red a nuestro servidor, que es la que utilizará el túnel VPN. La llamaremos <code>wg0</code>.</p>
 <p>Creamos el archivo de configuración de la interfaz:</p>
