--- a/metaformacion/index.html
+++ b/metaformacion/index.html
@@ -706,11 +706,140 @@
 </li>
 <li class="li ul-li list-star-li compact-li">Posibilidad de grabación en realidad virtual
 </li>
-<li class="li ul-li list-star-li compact-li">Zoe para crear experiencias educativas
+<li class="li ul-li list-star-li compact-li">Múltiples recursos para diferentes materias
+</li>
+<li class="li ul-li list-star-li compact-li">Y lo mejor está por llegar&#8230;
 </li></ul>
 
 <div class="center align-center" style="text-align:center">
-<p class="p noindent"><img src="images/zoe.png" title="zoe" alt="zoe" data-path="images/zoe.png" data-linkid="zoe" style="width:auto;max-width:70%"></p></div></section></div></div><span data-line=""></span></div>
+<p class="p noindent"><img src="images/learn.jpg" title="learning" alt="learning" data-path="images/learn.jpg" data-linkid="learning" style="width:auto;max-width:90%"></p></div></section>
+<section id="sec-cundo-usar-vr-en-educacin" class="section section1" data-section-depth="1"><h2 id="heading-sec-cundo-usar-vr-en-educacin" class="h1" data-heading-depth="1" style="display:block">¿Cuándo usar VR en educación?</h2>
+<ul class="ul list-star compact">
+<li class="li ul-li list-star-li compact-li">Falta de material (caro o escaso).
+</li>
+<li class="li ul-li list-star-li compact-li">Hay modelos o conceptos más fácil de comprender en tres dimensiones.
+</li>
+<li class="li ul-li list-star-li compact-li">Cambio de escala: universo, cuerpo humano, metáforas de dispositivos.
+</li>
+<li class="li ul-li list-star-li compact-li">Localizaciones remotas.
+</li>
+<li class="li ul-li list-star-li compact-li">Actividades peligrosas.
+</li>
+<li class="li ul-li list-star-li compact-li">Actividad manual que requiere pasos muy precisos.
+</li>
+<li class="li ul-li list-star-li compact-li">Ambiente controlado para replicar acciones de forma individual.
+</li></ul>
+</section>
+<section id="sec-creacin-de-experiencias-educativas" class="section section1" data-section-depth="1"><h2 id="heading-sec-creacin-de-experiencias-educativas" class="h1" data-heading-depth="1" style="display:block">Creación de experiencias educativas</h2>
+<ul class="ul list-star compact">
+<li class="li ul-li list-star-li compact-li">Educa360
+</li>
+<li class="li ul-li list-star-li compact-li">Zoe
+</li>
+<li class="li ul-li list-star-li compact-li">Ausencia de soluciones libres
+</li></ul>
+
+<div class="center align-center" style="text-align:center">
+<p class="p noindent"><img src="images/zoe.png" title="zoe" alt="zoe" data-path="images/zoe.png" data-linkid="zoe" style="width:auto;max-width:70%"></p></div></section>
+<section id="sec-idiomas" class="section section1" data-section-depth="1"><h2 id="heading-sec-idiomas" class="h1" data-heading-depth="1" style="display:block">Idiomas</h2>
+<ul class="ul list-star compact">
+<li class="li ul-li list-star-li compact-li"><a href="https://www.oculus.com/experiences/quest/4214902388537196/?locale=es_ES">Mondly: Learn Languages in VR</a>
+</li>
+<li class="li ul-li list-star-li compact-li">Intercambios virtuales:&nbsp;<a href="https://www.oculus.com/experiences/quest/3002729676463989/?locale=es_ES">Horizon Venues</a>
+</li>
+<li class="li ul-li list-star-li compact-li"><a href="https://immerseme.co">ImmerseMe</a>
+</li></ul>
+</section>
+<section id="sec-msica" class="section section1" data-section-depth="1"><h2 id="heading-sec-msica" class="h1" data-heading-depth="1" style="display:block">Música</h2>
+<ul class="ul list-star compact">
+<li class="li ul-li list-star-li compact-li"><a href="https://www.oculus.com/experiences/quest/4705981139481778">Virtuoso</a>
+</li>
+<li class="li ul-li list-star-li compact-li"><a href="https://grandreality.app">Grand Reality</a>
+</li>
+<li class="li ul-li list-star-li compact-li"><a href="https://www.oculus.com/experiences/go/section/447179202380843/">Experiencias musicales en VR</a>
+</li></ul>
+</section>
+<section id="sec-biologa-y-geologa" class="section section1" data-section-depth="1"><h2 id="heading-sec-biologa-y-geologa" class="h1" data-heading-depth="1" style="display:block">Biología y Geología</h2>
+<ul class="ul list-star compact">
+<li class="li ul-li list-star-li compact-li"><a href="https://www.oculus.com/experiences/quest/2926036530794417?ranking_trace=0_2926036530794417_QUESTSEARCH_021646a7-849a-4599-9485-e3773070836e">ecosphere</a>
+</li>
+<li class="li ul-li list-star-li compact-li"><a href="https://www.oculus.com/experiences/quest/5556243174447482/">High School Anatomy for Quest</a>
+</li>
+<li class="li ul-li list-star-li compact-li"><a href="https://www.oculus.com/experiences/quest/5320252051348244/?utm_source=sidequest">CPR</a>
+</li></ul>
+</section>
+<section id="sec-administrativo" class="section section1" data-section-depth="1"><h2 id="heading-sec-administrativo" class="h1" data-heading-depth="1" style="display:block">Administrativo</h2>
+<ul class="ul list-star compact">
+<li class="li ul-li list-star-li compact-li"><a href="https://www.oculus.com/experiences/quest/2514011888645651/">Horizon Workrooms</a>
+</li>
+<li class="li ul-li list-star-li compact-li"><a href="https://www.oculus.com/experiences/quest/3899112273551602/">ShapesXR</a>
+</li>
+<li class="li ul-li list-star-li compact-li"><a href="https://www.oculus.com/experiences/quest/3235570703151406/?locale=es_ES">Job Simulator</a>
+</li></ul>
+</section>
+<section id="sec-informtica" class="section section1" data-section-depth="1"><h2 id="heading-sec-informtica" class="h1" data-heading-depth="1" style="display:block">Informática</h2>
+<ul class="ul list-star compact">
+<li class="li ul-li list-star-li compact-li">Videojuegos serios:&nbsp;<a href="https://www.zoe.com/software/zoe-for-unity/">Crear experiencias educativas</a>
+</li>
+<li class="li ul-li list-star-li compact-li">Web:&nbsp;<a href="https://aframe.io">A-Frame</a>
+</li>
+<li class="li ul-li list-star-li compact-li"><a href="https://developer.oculus.com/get-started-platform/">Desarrollo</a>
+</li></ul>
+</section>
+<section id="sec-fsica-y-qumica" class="section section1" data-section-depth="1"><h2 id="heading-sec-fsica-y-qumica" class="h1" data-heading-depth="1" style="display:block">Física y Química</h2>
+<ul class="ul list-star compact">
+<li class="li ul-li list-star-li compact-li"><a href="https://www.oculus.com/experiences/quest/3632813843496339/?utm_medium=share&amp;utm_source=oculus">Molecule Builder</a>
+</li>
+<li class="li ul-li list-star-li compact-li"><a href="https://sidequestvr.com/app/591/faradays-magnets">Faraday´s Magnets VR</a>
+</li>
+<li class="li ul-li list-star-li compact-li"><a href="https://www.oculus.com/experiences/rift/1873145426039242/">Nanome</a>
+</li></ul>
+</section>
+<section id="sec-ciencias" class="section section1" data-section-depth="1"><h2 id="heading-sec-ciencias" class="h1" data-heading-depth="1" style="display:block">Ciencias</h2>
+<ul class="ul list-star compact">
+<li class="li ul-li list-star-li compact-li"><a href="https://www.oculus.com/experiences/quest/2359857214088490/?locale=es_ES">Titans of Space +</a>
+</li>
+<li class="li ul-li list-star-li compact-li"><a href="https://www.oculus.com/experiences/quest/2094303753986147/?locale=es_ES">Mission:ISS</a>
+</li>
+<li class="li ul-li list-star-li compact-li"><a href="https://www.oculus.com/experiences/quest/2046607608728563">National Geographic Explore VR</a>
+</li></ul>
+</section>
+<section id="sec-matemticas" class="section section1" data-section-depth="1"><h2 id="heading-sec-matemticas" class="h1" data-heading-depth="1" style="display:block">Matemáticas</h2>
+<ul class="ul list-star compact">
+<li class="li ul-li list-star-li compact-li"><a href="https://www.oculus.com/experiences/quest/3079043625531665/?utm_source=oculusapplab.com">Pandemic by Prisms</a>
+</li>
+<li class="li ul-li list-star-li compact-li"><a href="https://www.oculus.com/experiences/quest/5617270104965437/?utm_source=sidequest">Crop Craze: Farming Simulator</a>
+</li>
+<li class="li ul-li list-star-li compact-li"><a href="https://xr-graph.vercel.app">XR-Graph</a>
+</li></ul>
+</section>
+<section id="sec-tecnologa" class="section section1" data-section-depth="1"><h2 id="heading-sec-tecnologa" class="h1" data-heading-depth="1" style="display:block">Tecnología</h2>
+<ul class="ul list-star compact">
+<li class="li ul-li list-star-li compact-li"><a href="https://www.oculus.com/experiences/quest/2567395559960697">Gadgeteer</a>
+</li>
+<li class="li ul-li list-star-li compact-li"><a href="https://www.oculus.com/experiences/quest/2586839431358655/">Adam Savage&#39;s Tested VR</a>
+</li>
+<li class="li ul-li list-star-li compact-li"><a href="https://www.oculus.com/experiences/quest/1587090851394426/">Gravity Sketch</a>
+</li></ul>
+</section>
+<section id="sec-formacin-y-orientacin-laboral" class="section section1" data-section-depth="1"><h2 id="heading-sec-formacin-y-orientacin-laboral" class="h1" data-heading-depth="1" style="display:block">Formación y Orientación Laboral</h2>
+<ul class="ul list-star compact">
+<li class="li ul-li list-star-li compact-li"><a href="https://www.oculus.com/experiences/quest/3973230756042512/?locale=es_ES">VirtualSpeech</a>
+</li>
+<li class="li ul-li list-star-li compact-li"><a href="https://www.oculus.com/experiences/quest/2927141310670477">Spatial</a>
+</li>
+<li class="li ul-li list-star-li compact-li"><a href="https://www.oculus.com/experiences/quest/3714188128706579/?utm_source=oculusapplab.com">Bodyswaps</a>
+</li></ul>
+</section>
+<section id="sec-ms-sobre-educacin" class="section section1" data-section-depth="1"><h2 id="heading-sec-ms-sobre-educacin" class="h1" data-heading-depth="1" style="display:block">Más sobre educación</h2>
+<ul class="ul list-star compact">
+<li class="li ul-li list-star-li compact-li"><a href="https://www.oculus.com/experiences/quest/">Enlace a la tienda oficial</a>
+</li>
+<li class="li ul-li list-star-li compact-li">Existen más alternativas:&nbsp;<a href="https://applabgamelist.com/Best">App Lab</a>
+</li>
+<li class="li ul-li list-star-li compact-li">Experiencias en la web:&nbsp;<a href="https://experiments.withgoogle.com/access-mars">Access Mars</a>,&nbsp;<a href="https://experiments.withgoogle.com/speak-to-go">Speak to Go</a>, 
+</li>
+<li class="li ul-li list-star-li compact-li">Y esto solo acaba de empezar</li></ul></section></div></div><span data-line=""></span></div>
 </body>
 <script>
     // initialize printing
