--- a/metaformacion/index.html
+++ b/metaformacion/index.html
@@ -808,7 +808,9 @@
 <ul class="ul list-star compact">
 <li class="li ul-li list-star-li compact-li"><a href="https://www.oculus.com/experiences/quest/3079043625531665/?utm_source=oculusapplab.com">Pandemic by Prisms</a>
 </li>
-<li class="li ul-li list-star-li compact-li"><a href="https://www.oculus.com/experiences/quest/5617270104965437/?utm_source=sidequest">Crop Craze: Farming Simulator</a>
+<li class="li ul-li list-star-li compact-li"><a href="https://sidequestvr.com/app/574/carrolls-riddles">Carroll´s Riddles</a>
+</li>
+<li class="li ul-li list-star-li compact-li"><a href="https://sidequestvr.com/app/6642/number-cruncher">Number Cruncher</a>
 </li>
 <li class="li ul-li list-star-li compact-li"><a href="https://xr-graph.vercel.app">XR-Graph</a>
 </li></ul>
@@ -847,6 +849,28 @@
 <li class="li ul-li list-star-li compact-li"><a href="https://my.matterport.com/show/?m=d42fuVA21To">Tours virtuales</a>
 </li>
 <li class="li ul-li list-star-li compact-li"><a href="https://arvr.google.com/earth/">Google Earth VR</a>
+</li></ul>
+</section>
+<section id="sec-comercio-y-marketing" class="section section1" data-section-depth="1"><h2 id="heading-sec-comercio-y-marketing" class="h1" data-heading-depth="1" style="display:block">Comercio y Marketing</h2>
+<ul class="ul list-star compact">
+<li class="li ul-li list-star-li compact-li">Aplican aplicaciones de los apartados de Idiomas y Administrativo
+</li>
+<li class="li ul-li list-star-li compact-li"><a href="https://www.oculus.com/experiences/quest/5617270104965437/?utm_source=sidequest">Crop Craze: Farming Simulator</a>
+</li>
+<li class="li ul-li list-star-li compact-li"><a href="https://business.trustedshops.es/blog/ejemplos-realidad-aumentada-realidad-virtual-estrategia-marketing/">El cambio en la industria</a>
+</li>
+<li class="li ul-li list-star-li compact-li"><a href="https://cognitive3d.com/retail/">Analítica VR en los comercios</a>
+</li></ul>
+</section>
+<section id="sec-servicios-sociales-y-a-la-comunidad" class="section section1" data-section-depth="1"><h2 id="heading-sec-servicios-sociales-y-a-la-comunidad" class="h1" data-heading-depth="1" style="display:block">Servicios sociales y a la comunidad</h2>
+<ul class="ul list-star compact">
+<li class="li ul-li list-star-li compact-li"><a href="https://sidequestvr.com/app/5026/zenvr">ZenVR</a>
+</li>
+<li class="li ul-li list-star-li compact-li"><a href="https://sidequestvr.com/app/1902/imercyve-living-with-intellectual-disability">Imercyve: Living with Intellectual Disability</a>
+</li>
+<li class="li ul-li list-star-li compact-li"><a href="https://sidequestvr.com/app/3784/sea-level-rise-explorer-long-beach">Sea Level Rise Explorer: Long Beach</a>
+</li>
+<li class="li ul-li list-star-li compact-li"><a href="https://sidequestvr.com/app/1262/everyday-inclusion-an-interactive-learning-journey-about-unconscious-bias">Everyday Inclusion - An Interactive Learning Journey About Unconscious Bias</a>
 </li></ul>
 </section>
 <section id="sec-ms-sobre-educacin" class="section section1" data-section-depth="1"><h2 id="heading-sec-ms-sobre-educacin" class="h1" data-heading-depth="1" style="display:block">Más sobre educación</h2>
