--- a/Practicas/crear-codelab/index.html
+++ b/Practicas/crear-codelab/index.html
@@ -237,10 +237,10 @@ $ claat serve
     
   </google-codelab>
 
-  <script src="https://storage.googleapis.com/codelab-elements/native-shim.js"></script>
-  <script src="https://storage.googleapis.com/codelab-elements/custom-elements.min.js"></script>
-  <script src="https://storage.googleapis.com/codelab-elements/prettify.js"></script>
-  <script src="https://storage.googleapis.com/codelab-elements/codelab-elements.js"></script>
+  <script src="codelab-elements/native-shim.js"></script>
+  <script src="codelab-elements/custom-elements.min.js"></script>
+  <script src="codelab-elements/prettify.js"></script>
+  <script src="codelab-elements/codelab-elements.js"></script>
   <script src="//support.google.com/inapp/api.js"></script>
 
 </body>
