--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <a class="button button-default" href="https://davidlms.com" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-blog.svg" alt="">Lee mi blog</a><br>
 
         <!-- X -->
-        <a class="button button-x" href="https://x.com/LMS_David_RS" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/x.svg" alt="">Sígueme en X</a><br>
+        <a class="button button-x" href="https://x.com/davidlmsES" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/x.svg" alt="">Sígueme en X</a><br>
 
         <!-- Default LittleLink -->
         <!--<a class="button button-default" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/littlelink.svg" alt="">LittleLink</a><br>-->
